Closed Bug 1802533 Opened 2 years ago Closed 2 years ago

Cannot expand folder in Library after open `Browser Console` and choose `chrome://browser/content/places/places.xhtml`

Categories

(DevTools :: General, defect)

Firefox 109
Desktop
Windows 10
defect

Tracking

(firefox-esr102 unaffected, firefox107 unaffected, firefox108 unaffected, firefox109 verified, firefox110 verified)

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- verified
firefox110 --- verified

People

(Reporter: alice0775, Assigned: emilio)

References

(Regressed 1 open bug, Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

What were you doing?

  1. Open Library (Ctrl+Shift+O)
  2. Open Browser Toolbox (Ctrl+Shift+Alt+I)
  3. Choose chrome://browser/content/places/places.xhtml from document picker at right side of toolbar.

4-a. Attempt to expand folder by clicking of tree twister in left pane.
4-b. Attempt to expand folder by double clicking of tree folder in left pane.
4-c. Attempt to expand folder by double clicking of tree folder in right pane.

What happened?

In step 3, the Browser Console displays the following error

Uncaught 
Exception { name: "NS_ERROR_UNEXPECTED", message: "Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsINavHistoryResultNode.parentResult]", result: 2147549183, filename: "resource://gre/modules/PlacesUtils.sys.mjs", lineNumber: 901, columnNumber: 0, data: null, stack: "PU_nodeIsTagQuery@resource://gre/modules/PlacesUtils.sys.mjs:901:1\nPTV_isContainer@chrome://browser/content/places/treeView.js:1370:55\n", location: XPCWrappedNative_NoHelper }
629 PlacesUtils.sys.mjs:901

And When step4


Uncaught 
Exception { name: "NS_ERROR_ILLEGAL_VALUE", message: "Component returned failure code: 0x80070057 (NS_ERROR_ILLEGAL_VALUE) [nsINavHistoryResult.removeObserver]", result: 2147942487, filename: "chrome://browser/content/places/treeView.js", lineNumber: 1652, columnNumber: 0, data: null, stack: "PTV_setTree@chrome://browser/content/places/treeView.js:1652:24\nset view@chrome://browser/content/places/places-tree.js:179:13\nload@chrome://browser/content/places/places-tree.js:461:7\nset place@chrome://browser/content/places/places-tree.js:219:12\nset currentPlace@chrome://browser/content/places/places.js:1400:5\nPO_onPlaceSelected@chrome://browser/content/places/places.js:350:7\nonselect@chrome://browser/content/places/places.xhtml:1:17\nMozTreeChildren/<@chrome://global/content/elements/tree.js:69:28\n", location: XPCWrappedNative_NoHelper }
treeView.js:1652

Error: Cannot use an incomplete node to initialize the edit bookmark panel
    _setPaneInfo chrome://browser/content/places/instantEditBookmark.js:82
    initPanel chrome://browser/content/places/instantEditBookmark.js:282
    PO__fillDetailsPane chrome://browser/content/places/places.js:761
    PO_updateDetailsPane chrome://browser/content/places/places.js:435
    onselect chrome://browser/content/places/places.xhtml:1
    PTV_invalidateContainer chrome://browser/content/places/treeView.js:1135
    PTV_containerStateChanged chrome://browser/content/places/treeView.js:997
    PTV__finishInit chrome://browser/content/places/treeView.js:69
    PTV_setTree chrome://browser/content/places/treeView.js:1657
    set view chrome://browser/content/places/places-tree.js:179
    load chrome://browser/content/places/places-tree.js:461
    set place chrome://browser/content/places/places-tree.js:219
    set currentPlace chrome://browser/content/places/places.js:1400
    PO_onPlaceSelected chrome://browser/content/places/places.js:350
    onselect chrome://browser/content/places/places.xhtml:1
    MozTreeChildren chrome://global/content/elements/tree.js:69
places.js:765:30
    PO__fillDetailsPane chrome://browser/content/places/places.js:765
    (Async: promise callback)
    PO__fillDetailsPane chrome://browser/content/places/places.js:765
    PO_updateDetailsPane chrome://browser/content/places/places.js:435
    onselect chrome://browser/content/places/places.xhtml:1
    PTV_invalidateContainer chrome://browser/content/places/treeView.js:1135
    PTV_containerStateChanged chrome://browser/content/places/treeView.js:997
    PTV__finishInit chrome://browser/content/places/treeView.js:69
    PTV_setTree chrome://browser/content/places/treeView.js:1657
    set view chrome://browser/content/places/places-tree.js:179
    load chrome://browser/content/places/places-tree.js:461
    set place chrome://browser/content/places/places-tree.js:219
    set currentPlace chrome://browser/content/places/places.js:1400
    PO_onPlaceSelected chrome://browser/content/places/places.js:350
    onselect chrome://browser/content/places/places.xhtml:1
    MozTreeChildren chrome://global/content/elements/tree.js:69
    
Error: Cannot use an incomplete node to initialize the edit bookmark panel
    _setPaneInfo chrome://browser/content/places/instantEditBookmark.js:82
    initPanel chrome://browser/content/places/instantEditBookmark.js:282
    PO__fillDetailsPane chrome://browser/content/places/places.js:761
    PO_updateDetailsPane chrome://browser/content/places/places.js:435
    onselect chrome://browser/content/places/places.xhtml:1
    PTV__finishInit chrome://browser/content/places/treeView.js:78
    PTV_setTree chrome://browser/content/places/treeView.js:1657
    set view chrome://browser/content/places/places-tree.js:179
    load chrome://browser/content/places/places-tree.js:461
    set place chrome://browser/content/places/places-tree.js:219
    set currentPlace chrome://browser/content/places/places.js:1400
    PO_onPlaceSelected chrome://browser/content/places/places.js:350
    onselect chrome://browser/content/places/places.xhtml:1
    MozTreeChildren chrome://global/content/elements/tree.js:69
places.js:765:30
    PO__fillDetailsPane chrome://browser/content/places/places.js:765
    (Async: promise callback)
    PO__fillDetailsPane chrome://browser/content/places/places.js:765
    PO_updateDetailsPane chrome://browser/content/places/places.js:435
    onselect chrome://browser/content/places/places.xhtml:1
    PTV__finishInit chrome://browser/content/places/treeView.js:78
    PTV_setTree chrome://browser/content/places/treeView.js:1657
    set view chrome://browser/content/places/places-tree.js:179
    load chrome://browser/content/places/places-tree.js:461
    set place chrome://browser/content/places/places-tree.js:219
    set currentPlace chrome://browser/content/places/places.js:1400
    PO_onPlaceSelected chrome://browser/content/places/places.js:350
    onselect chrome://browser/content/places/places.xhtml:1
    MozTreeChildren chrome://global/content/elements/tree.js:69
    

In step 4-a,b,c
Cant expand the folder.

What should have happened?

The folder should expand.

Anything else we should know?

No add-ons installed.
Just enable remote debugging chrome and add bookmark folders and bookmark items in a new profile.

Version: unspecified → Firefox 109

:emilio, since you are the author of the regressor, bug 1800473, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Given the STR I was almost close to WONTFIX this, but it seems worth
fixing regardless, if only because this also happens in content pages
and it's something I've been bitten by before (try to debug a layout
bug, inspect the element, then realize the bug is "fixed" because we
reframed everything).

This is mostly a performance optimization, so it doesn't seem super-easy
to test, particularly since you can't quite just change styles of NAC
easily...

I'll try to remove that block altogether in a follow-up.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Flags: qe-verify+

Reproducible on a 2022-11-25 Nightly build on macOS 12.
Verified as fixed on Firefox 109.0b4(build ID: 20221218190303) and Nightly 110.0a1(build ID: 20221219162526) on macOS 12, Windows 10, Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
See Also: → 1825030
Regressions: 1850539
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: