Bug 1802533 - Make insertAnonymousContent() not reframe the whole frame tree the first time it's added to the document. r=TYLin

Given the STR I was almost close to WONTFIX this, but it seems worth
fixing regardless, if only because this also happens in content pages
and it's something I've been bitten by before (try to debug a layout
bug, inspect the element, then realize the bug is "fixed" because we
reframed everything).

This is mostly a performance optimization, so it doesn't seem super-easy
to test, particularly since you can't quite just change styles of NAC
easily...

I'll try to remove that block altogether in a follow-up.

Differential Revision: https://phabricator.services.mozilla.com/D163151